# The-Ultimate-Guide-To-Snowpark

./: .flake8  CI_CD_README.md  SETUP_INSTRUCTIONS.md  pyproject.toml  setup_fork.sh
.github/workflows/: cd.yml  ci.yml  code-quality.yml  dependency-update.yml  test-matrix.yml
chapter_2/worksheets/worksheet_codes/: external_stage_worksheet.py  last_name_finder_stage.py  session_worksheet.py
chapter_7/: streamlit_bike_share_analysis.py
chapter_7/native_apps/streamlit/: streamlit_bike_share_analysis.py
chapter_8/job/docker_contents/: main.py
chapter_8/service/docker_content/: filter_service.py
